terraform/sg.tf
resource "aws_security_group" "simple_website_sg" {
  name        = "simple_website_sg"
  description = "Allow inbound/outbound traffic"
  vpc_id      = aws_vpc.vpc_primary.id

  tags = {
    Terraform = true
    Name = "Allow inbound/outbound traffic"
  }
}

resource "aws_security_group_rule" "ssh" {
  description       = "Allow SSH"
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = aws_security_group.simple_website_sg.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "https" {
  description       = "Allow HTTPS"
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.simple_website_sg.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "http" {
  description       = "Allow HTTP"
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = aws_security_group.simple_website_sg.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "outbound_simple_website" {
  description       = "Allow all outbound traffic"
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  security_group_id = aws_security_group.simple_website_sg.id
  cidr_blocks       = ["0.0.0.0/0"]
}
